More exploratory/setup notes on development of a webapp.

--- a/LLWebJ/_README.org
+++ b/LLWebJ/_README.org
@@ -31,7 +31,11 @@
 
 * What the heck am I doing?
 
+  See 
+
 ** Gradle
 
-** and stuff
+** JavaEE dependencies
+
+   Need all the =javax.servlet= stuff, at least.
    
